Залил проект на сервер
Исправил ошибки

--- a/src/index.html
+++ b/src/index.html
@@ -67,22 +67,24 @@
 
 <div class="main">
 <h2>Расчет стоимости</h2>
-
+<a href=""></a>
 <form action="#">
 
 <p><b>ТИП САЙТА</b></p>
-<input type="text" name="text_input" value="" placeholder="Выберите пункт">
+<option value="" selected="" disabled="">Выберите пункт</option>
 <select name="" id=""></select>
 
 <p><b>ДИЗАЙН</b></p>
-<input type="text" name="text_input" value="" placeholder="Выберите пункт">
+<option value="" selected="" disabled="">Выберите пункт</option>
 <select name="" id=""></select>
 
 <p><b>АДАПТИВНОСТЬ</b></p>
-<input type="text" name="text_input" value="" placeholder="Выберите пункт">
+<option value="" selected="" disabled="">Выберите пункт</option>
 <select name="" id=""></select>
+<p>Сроки</p> 
+<P>Стоимость</P>
 </form>
-<br><textarea name="" id="" cols="100" rows="2"></textarea>
+
 </div>
 
 <div class="main">
@@ -121,18 +123,18 @@
 <form action="#">
 
 <span><input type="text" name="text_input" value="" placeholder="Имя"><input type="text" name="text_input" value="" placeholder="EMAIL"></span>
-<p><input type="text" name="text_input" value="" placeholder="Сообщение"></p>
+<p> <textarea name="Сообщение" id="" cols="30" rows="10"></textarea></p>
 <input type="submit" value="Отправить">
 
-<p><span>
+<p>
 <img src="img/%D1%84%D0%B1.png" alt="">
 <img src="img/%D1%82%D0%B2%D0%B8%D1%82%D0%B5%D1%80.png" alt="">
 <img src="img/%D0%BC%D1%8F%D1%87.png" alt="">
 <img src="img/%D0%BA%D0%B8%D1%81%D0%B0.png" alt="">
 <img src="img/%D0%B8%D0%BD%D1%81%D1%82.png" alt="">
 <img src="img/%D0%B8%D0%BD.png" alt="">
-<p><img src="img/%D0%9A%D0%B0%D1%80%D1%82%D0%B0%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt=""></p>
-</span>
+<br><img src="img/%D0%9A%D0%B0%D1%80%D1%82%D0%B0%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt="">
+
 <p>Copyright©2021 Виктор Рощупкин.Design by Web</p>
 </form>
 </footer>
