Залил проект на сервер.

--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Виктор Рощупкин - веб разработчик</title>
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
  
 <header>
      <nav>
-              <div class="logo"> Виктор Рощупкин </div>
-              <div class="menu_item">Обо мне</div> 
-              <div class="menu_item">Услуги</div>
-              <div class="menu_item">Кейсы</div>
-              <div class="menu_item">Прайс</div>
-              <div class="menu_item">Отзывы</div>
-              <div class="menu_item">Контакты</div>
+             <div class="logo"> Виктор Рощупкин </div>
+             <div class="menu_item">
+                <div>Обо мне</div>
+                <div>Услуги</div>
+                <div>Кейсы</div>
+                <div>Прайс</div>
+                <div>Отзывы</div>
+                <div>Контакты</div>
+           </div> 
+             
      </nav>
 </header>
 
-<div class="main"><div class="title__container">
+<div class="main1"><div class="title__container">
 <h1>Привет<br>Я Виктор Рощупкин</h1>
 <h4>Фулл стек веб - разработчик</h4>
 <input type="submit" value="Обо мне">
@@ -26,53 +31,56 @@
 </div></div>
 
 
-<div class="main">
-<h3><u>ОБО МНЕ</u></h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia vel, id officiis dolor doloremque, fugit expedita, eius ullam libero error labore nostrum impedit sit. Quasi molestiae facilis, dignissimos reiciendis repudiandae et, ab dolor!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia vel, id officiis dolor doloremque, fugit expedita, eius ullam libero error labore nostrum impedit sit. Quasi molestiae facilis, dignissimos reiciendis repudiandae et, ab dolor!</p>
-<img src="img/%D0%B8%D0%BA%D0%BE%D0%BD%D0%BA%D0%B0.png" alt=""><input type="submit" value="Скачать резюме">
+<div class="main2"><div class="title__container1">
+<h3>ОБО МНЕ</h3>
+<div class="block"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia vel, id officiis dolor doloremque, fugit expedita, eius ullam libero error labore nostrum impedit sit. Quasi molestiae facilis, dignissimos reiciendis repudiandae et, ab dolor!
+</p>
 </div>
+<div class="block2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia vel, id officiis dolor doloremque, fugit expedita, eius ullam libero error labore nostrum impedit sit. Quasi molestiae facilis, dignissimos reiciendis repudiandae et, ab dolor!</p></div>
+<input type="submit" value="Скачать резюме">
+</div></div>
 
 
-<div class="main">
-<h3><u>ЧТО Я УМЕЮ</u></h3>
+<div class="main3"><div class="title__container2">
+<h3>ЧТО Я УМЕЮ</h3>
 
-<img src="img/%D0%BD%D0%BE%D1%83%D1%82.png" alt="">
-    <b>Веб-дизайн</b>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor in saepe eveniet blanditiis et, sunt.</p> 
-<img src="img/%D0%B7%D0%BD%D0%B0%D0%BA.png" alt=""> 
-    <b>Разработка</b> 
+
+   <div class="menu_item1">
+      <b>Веб-дизайн</b>
+      <b>Разработка</b> 
+      <b>СЕО-оптимизация</b> 
+      <b>Маркетинг</b> 
+     <div class="menu_item2">
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor in saepe eveniet blanditiis et, sunt.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci  aperiam, deleniti id!</p>
-<img src="img/%D1%80%D0%B0%D0%BA%D0%B5%D1%82%D0%B0.png" alt=""> 
-    <b>СЕО-оптимизация</b> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus odio, totam enim provident, voluptates ut.</p> 
-<img src="img/%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BE%D1%84%D0%BE%D0%BD.png" alt=""> 
-    <b>Маркетинг</b> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid labore facilis, error cum. Repellat.</p>
-</div>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus odio, totam enim    provident, voluptates ut.</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid labore facilis, error cum. Repellat.</p></div></div>
+</div></div>
  
+ 
+<div class="main4"><div class="title__container3">
+<h3>КЕЙСЫ</h3>
 
-<div class="main">
-<h3><u>КЕЙСЫ</u></h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fuga voluptatibus rem? Quis voluptate dolores, neque similique provident.</p>
 
-<img src="img/%D1%84%D0%BE%D1%82%D0%BA%D0%B0.png" alt="">
+<div class="block3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fuga voluptatibus rem? Quis voluptate dolores, neque similique provident.</p></div>
 
-<p><b>Название проекта</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut maiores animi itaque, velit commodi ipsa ea obcaecati laudantium eveniet, voluptatibus unde inventore cum quis beatae accusantium cumque qui praesentium, vero laboriosam recusandae magnam vitae! Iste facere, sint eaque reprehenderit quam placeat adipisci earum consequatur nostrum eveniet debitis veritatis dolores sequi error. Dignissimos?</p>
+<div class="menu_item3"><b>CLIENT:</b><br>Какая-то компания<br>
+<b>WEBSITE:</b><br><small>https://www.somedoman.com/</small></div>
 
-<b>CLIENT:</b><br>Какая-то компанияspan<br>
-<b>WEBSITE:</b><br><small>https://www.somedoman.com/</small>
+<div class="menu_item4"><p><b>Название проекта</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut maiores animi itaque, velit commodi ipsa ea obcaecati laudantium eveniet, voluptatibus unde inventore cum quis beatae accusantium cumque qui praesentium, vero laboriosam recusandae magnam vitae! Iste facere, sint eaque reprehenderit quam placeat adipisci earum consequatur nostrum eveniet debitis veritatis dolores sequi error. Dignissimos?</p></div>
+
+
 <br><input type="submit" value="VISIT LIVE SITE">
-</div>
+    </div></div>
 
-<div class="main">
+<div class="main5"><div class="title__container4">
 <h2>Расчет стоимости</h2>
 <a href=""></a>
 <form action="#">
 
-<p><b>ТИП САЙТА</b></p>
-<option value="" selected="" disabled="">Выберите пункт</option>
-<select name="" id=""></select>
+<div class="menu_item5"><p><b>ТИП САЙТА</b></p>
+<option value=""selected=""disabled="">Выберите пункт</option>
+<select name="" id="" disabled></select>
 
 <p><b>ДИЗАЙН</b></p>
 <option value="" selected="" disabled="">Выберите пункт</option>
@@ -81,50 +89,51 @@
 <p><b>АДАПТИВНОСТЬ</b></p>
 <option value="" selected="" disabled="">Выберите пункт</option>
 <select name="" id=""></select>
-<p>Сроки</p> 
-<P>Стоимость</P>
-</form>
+<div class="menu_item6">
+<p>Сроки 0</p> 
+<P>Стоимость 0</P>
+</div></div></form>
 
-</div>
+</div></div>
 
-<div class="main">
-<h3><u>НЕМНОГО СТАТИСТИКИ</u></h3>
-<img src="img/%D1%81%D0%BC%D0%B0%D0%B9%D0%BB.png" alt="">
-   <br><b>120</b><br>СЧАСТЛИВЫХ КЛИЕНТОВ
-     <p><img src="img/%D1%81%D0%BA%D0%BE%D0%B1%D0%BA%D0%B8.png" alt=""></p>
-  <br><b>4.600</b><br>ЧАСОВ РАБОТЫ
-      <p><img src="img/%D0%B3%D0%B0%D0%BB%D0%BE%D1%87%D0%BA%D0%B0.png" alt=""></p>
-  <br><b>340</b><br>ПРОЕКТОВ ЗАВЕРШЕНО
-    <p><img src="img/%D0%BA%D1%83%D0%B1%D0%BE%D0%BA.png" alt=""></p>
-  <br><b>23</b><br>НАГРАД ПОЛУЧЕНО
-</div>
+<div class="main6"><div class="title__container5">
+<h3>НЕМНОГО СТАТИСТИКИ</h3>
 
-<div class="main">
-<h3><u>ОТЗЫВЫ</u></h3>
-  <img src="img/%D1%84%D0%BE%D1%82%D0%BA%D0%B02.png" alt="">
-    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quae minus possimus autem tempora iusto dolorum quam sit doloribus, non! Culpa non sunt accusantium nemo recusandae, vitae deserunt voluptatibus perferendis consectetur!</span>
-<p><b>Михаил</b>, Ген директор ПАО "Газпром".</p>
-<p><img src="img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6.png" alt=""><span>
- <img src="img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt="">
- <img src="img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F%202.png" alt=""></span></p>
-</div>
+  <div class="menu_item7">
+    <b>120</b>   
+    <b>4.600</b>   
+    <b>340</b>     
+    <b>23</b> 
+    <div class="menu_item8">
+         <p>СЧАСТЛИВЫХ КЛИЕНТОВ</p>
+         <p>ЧАСОВ РАБОТЫ</p>
+         <p>РОЕКТОВ ЗАВЕРШЕНО</p>
+         <p>НАГРАД ПОЛУЧЕНО</p>
+</div></div></div></div>
 
-<div class="main">
-<h3><u>МОИ КОНТАКТЫ</u></h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eaque, voluptates. Rem voluptatem dolorem beatae.</p>
-<img src="img/%D0%B3%D0%B5%D0%BE.png" alt="">
-     <br>Санкт-Петербург<br>Невский проспект11
-        <p><img src="img/%D0%BA%D0%BE%D0%BD%D0%B2%D0%B5%D1%80%D1%82.png" alt=""></p>
-     <br>info@Companyname.com
-        <p><img src="img/%D1%82%D1%80%D1%83%D0%B1%D0%B0.png" alt=""></p>
-<br>+7999 999-99-99
-<p>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</p>
+<div class="main7"><div class="title__container6">
+<h3>ОТЗЫВЫ</h3>
+  
+    <div class="block3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quae minus possimus autem tempora iusto dolorum quam sit doloribus, non! Culpa non sunt accusantium nemo recusandae, vitae deserunt voluptatibus perferendis consectetur!</p></div>
+<div class="block4"><p><b>Михаил</b>, Ген директор ПАО "Газпром".</p></div>
+    </div></div>
+
+<div class="main8"><div class="title__container7">
+<h3>МОИ КОНТАКТЫ</h3>
+ <div class="block5"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eaque, voluptates. Rem voluptatem dolorem beatae.</p>
+
+    <div class="menu_item9">
+    <p>Санкт-Петербург Невский проспект11</p>
+    <p>info@Companyname.com</p>
+    <p>+7999999-99-99</p>
+<b>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</b>
 <footer>
 <form action="#">
-
-<span><input type="text" name="text_input" value="" placeholder="Имя"><input type="text" name="text_input" value="" placeholder="EMAIL"></span>
-<p> <textarea name="Сообщение" id="" cols="30" rows="10"></textarea></p>
-<input type="submit" value="Отправить">
+<div class="title__container7">
+<input type="text" name="text_input" value="" placeholder="Имя">
+    <input type="text" name="text_input" value="" placeholder="Email"></div>
+<textarea name="Сообщение" id="" cols="30" rows="10"></textarea>
+<div class="title__container9"><input type="submit" value="Отправить">
 
 <p>
 <img src="img/%D1%84%D0%B1.png" alt="">
@@ -135,10 +144,10 @@
 <img src="img/%D0%B8%D0%BD.png" alt="">
 <br><img src="img/%D0%9A%D0%B0%D1%80%D1%82%D0%B0%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt="">
 
-<p>Copyright©2021 Виктор Рощупкин.Design by Web</p>
+<p>Copyright©2021 Виктор Рощупкин.Design by Web</p></div>
 </form>
 </footer>
-</div>
+</div></div></div></div>
 
 </body>
 </html>
