--- a/src/index.html
+++ b/src/index.html
@@ -114,40 +114,39 @@
 <div class="main7"><div class="title__container6">
 <h3>ОТЗЫВЫ</h3>
   
-    <div class="block3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quae minus possimus autem tempora iusto dolorum quam sit doloribus, non! Culpa non sunt accusantium nemo recusandae, vitae deserunt voluptatibus perferendis consectetur!</p></div>
-<div class="block4"><p><b>Михаил</b>, Ген директор ПАО "Газпром".</p></div>
+    <div class="block4"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quae minus possimus autem tempora iusto dolorum quam sit doloribus, non! Culpa non sunt accusantium nemo recusandae, vitae deserunt voluptatibus perferendis consectetur!</p></div>
+<div class="block5"><p><b>Михаил</b>, Ген директор ПАО "Газпром".</p></div>
     </div></div>
 
 <div class="main8"><div class="title__container7">
 <h3>МОИ КОНТАКТЫ</h3>
- <div class="block5"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eaque, voluptates. Rem voluptatem dolorem beatae.</p>
+ <div class="block6"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eaque, voluptates. Rem voluptatem dolorem beatae.</p>
 
     <div class="menu_item9">
-    <p>Санкт-Петербург Невский проспект11</p>
-    <p>info@Companyname.com</p>
-    <p>+7999999-99-99</p>
-<b>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</b>
+    <b>Санкт-Петербург Невский проспект11</b>
+    <b>info@Companyname.com</b>
+    <b>+7999999-99-99</b>
+<div class="menu_item10">
+<p>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</p>
 <footer>
 <form action="#">
 <div class="title__container7">
 <input type="text" name="text_input" value="" placeholder="Имя">
     <input type="text" name="text_input" value="" placeholder="Email"></div>
-<textarea name="Сообщение" id="" cols="30" rows="10"></textarea>
-<div class="title__container9"><input type="submit" value="Отправить">
+<div class="title__container8">
+<textarea name="Сообщение" id="g" cols="101" rows="20"></textarea></div>
+<div class="title__container9"><input type="submit" value="Отправить"></div>
 
 <p>
-<img src="img/%D1%84%D0%B1.png" alt="">
-<img src="img/%D1%82%D0%B2%D0%B8%D1%82%D0%B5%D1%80.png" alt="">
-<img src="img/%D0%BC%D1%8F%D1%87.png" alt="">
-<img src="img/%D0%BA%D0%B8%D1%81%D0%B0.png" alt="">
-<img src="img/%D0%B8%D0%BD%D1%81%D1%82.png" alt="">
-<img src="img/%D0%B8%D0%BD.png" alt="">
-<br><img src="img/%D0%9A%D0%B0%D1%80%D1%82%D0%B0%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png" alt="">
 
-<p>Copyright©2021 Виктор Рощупкин.Design by Web</p></div>
+
+
+<div class="main9"><div class="title__container10">
+
+<p>Copyright©2021 Виктор Рощупкин.Design by Web</p></div></div>
 </form>
 </footer>
-</div></div></div></div>
+</div></div></div></div></div>
 
 </body>
 </html>
