--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Виктор Рощупкин - веб разработчик</title>
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/animate.min.css">
 </head>
 <body>
  
@@ -12,36 +13,39 @@
      <nav>
              <div class="logo"> Виктор Рощупкин </div>
              <div class="menu_item">
-                <div>Обо мне</div>
-                <div>Услуги</div>
-                <div>Кейсы</div>
-                <div>Прайс</div>
-                <div>Отзывы</div>
-                <div>Контакты</div>
+              <ul>
+              <li><a href="#">Обо мне</a></li>
+              <li><a href="#">Услуги</a></li>
+              <li><a href="#">Кейсы</a></li>
+               <li><a href="#">Прайс</a></li>
+              <li><a href="#">Отзывы</a></li>
+               <li><a href="#">Контакты</a></li>
+               </ul>
            </div> 
              
      </nav>
 </header>
-
-<div class="main1"><div class="title__container">
+<main>
+<section class="main"><div class="title__container">
 <h1>Привет<br>Я Виктор Рощупкин</h1>
 <h4>Фулл стек веб - разработчик</h4>
-<input type="submit" value="Обо мне">
-<input type="submit" value="Мои работы">
-</div></div>
+<input type="button" value="Обо мне">
+<input type="button" value="Мои работы">
+</div></section>
+</main>
 
-
-<div class="main2"><div class="title__container1">
+<main><section class="main2"><div class="title__container1">
 <h3>ОБО МНЕ</h3>
 <div class="block"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia vel, id officiis dolor doloremque, fugit expedita, eius ullam libero error labore nostrum impedit sit. Quasi molestiae facilis, dignissimos reiciendis repudiandae et, ab dolor!
 </p>
 </div>
 <div class="block2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia vel, id officiis dolor doloremque, fugit expedita, eius ullam libero error labore nostrum impedit sit. Quasi molestiae facilis, dignissimos reiciendis repudiandae et, ab dolor!</p></div>
 <input type="submit" value="Скачать резюме">
-</div></div>
+</div></section>
+</main>
 
-
-<div class="main3"><div class="title__container2">
+<main>
+<section class="main3"><div class="title__container2">
 <h3>ЧТО Я УМЕЮ</h3>
 
 
@@ -55,10 +59,11 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci  aperiam, deleniti id!</p>
      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus odio, totam enim    provident, voluptates ut.</p>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid labore facilis, error cum. Repellat.</p></div></div>
-</div></div>
+</div></section>
+ </main>
  
- 
-<div class="main4"><div class="title__container3">
+ <main>
+<section class="main4"><div class="title__container3">
 <h3>КЕЙСЫ</h3>
 
 
@@ -71,32 +76,37 @@
 
 
 <br><input type="submit" value="VISIT LIVE SITE">
-    </div></div>
+    </div></section>
+</main>
 
-<div class="main5"><div class="title__container4">
+<main>
+<section class="main5"><div class="title__container4">
 <h2>Расчет стоимости</h2>
 <a href=""></a>
 <form action="#">
 
-<div class="menu_item5"><p><b>ТИП САЙТА</b></p>
-<option value=""selected=""disabled="">Выберите пункт</option>
-<select name="" id="" disabled></select>
+<div class="menu_item5"><p>
+<b>ТИП САЙТА</b></p>
+
+<select><option>Выберите пункт</option></select>
 
 <p><b>ДИЗАЙН</b></p>
-<option value="" selected="" disabled="">Выберите пункт</option>
-<select name="" id=""></select>
+
+<select><option>Выберите пункт</option></select>
 
 <p><b>АДАПТИВНОСТЬ</b></p>
-<option value="" selected="" disabled="">Выберите пункт</option>
-<select name="" id=""></select>
+
+<select><option>Выберите пункт</option></select>
 <div class="menu_item6">
 <p>Сроки 0</p> 
 <P>Стоимость 0</P>
 </div></div></form>
 
-</div></div>
+</div></section>
+</main>
 
-<div class="main6"><div class="title__container5">
+<main>
+<section class="main6"><div class="title__container5">
 <h3>НЕМНОГО СТАТИСТИКИ</h3>
 
   <div class="menu_item7">
@@ -109,16 +119,20 @@
          <p>ЧАСОВ РАБОТЫ</p>
          <p>РОЕКТОВ ЗАВЕРШЕНО</p>
          <p>НАГРАД ПОЛУЧЕНО</p>
-</div></div></div></div>
+</div></div></div></section>
+</main>
 
-<div class="main7"><div class="title__container6">
+<main>
+<section class="main7"><div class="title__container6">
 <h3>ОТЗЫВЫ</h3>
   
     <div class="block4"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam quae minus possimus autem tempora iusto dolorum quam sit doloribus, non! Culpa non sunt accusantium nemo recusandae, vitae deserunt voluptatibus perferendis consectetur!</p></div>
 <div class="block5"><p><b>Михаил</b>, Ген директор ПАО "Газпром".</p></div>
-    </div></div>
+    </div></section>
+</main>
 
-<div class="main8"><div class="title__container7">
+<main>
+<section class="main8"><div class="title__container7">
 <h3>МОИ КОНТАКТЫ</h3>
  <div class="block6"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, eaque, voluptates. Rem voluptatem dolorem beatae.</p>
 
@@ -132,7 +146,8 @@
 <form action="#">
 <div class="title__container7">
 <input type="text" name="text_input" value="" placeholder="Имя">
-    <input type="text" name="text_input" value="" placeholder="Email"></div>
+   
+    <input id="email" type="email" autocomlete="off" required placeholder="Email"></div>
 <div class="title__container8">
 <textarea name="Сообщение" id="g" cols="101" rows="20"></textarea></div>
 <div class="title__container9"><input type="submit" value="Отправить"></div>
@@ -146,7 +161,7 @@
 <p>Copyright©2021 Виктор Рощупкин.Design by Web</p></div></div>
 </form>
 </footer>
-</div></div></div></div></div>
-
+</div></div></div></div></section>
+</main> 
 </body>
-</html>
+</html> 
