--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 <div class="block3"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis fuga voluptatibus rem? Quis voluptate dolores, neque similique provident.</p></div>
 
 <div class="menu_item3"><b>CLIENT:</b><br>Какая-то компания<br>
-<b>WEBSITE:</b><br><small>https://www.somedoman.com/</small></div>
+<b>WEBSITE:</b><br><small><a href="">https://www.somedoman.com/</a></small></div>
 
 <div class="menu_item4"><p><b>Название проекта</b><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut maiores animi itaque, velit commodi ipsa ea obcaecati laudantium eveniet, voluptatibus unde inventore cum quis beatae accusantium cumque qui praesentium, vero laboriosam recusandae magnam vitae! Iste facere, sint eaque reprehenderit quam placeat adipisci earum consequatur nostrum eveniet debitis veritatis dolores sequi error. Dignissimos?</p></div>
 
@@ -138,7 +138,7 @@
 
     <div class="menu_item9">
     <b>Санкт-Петербург Невский проспект11</b>
-    <b>info@Companyname.com</b>
+    <b><a href="https://viktorroshupkin.github.io/src/">info@Companyname.com</a></b>
     <b>+7999999-99-99</b>
 <div class="menu_item10">
 <p>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</p>
