--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
 <link rel="stylesheet" href="css/animate.min.css">
 </head>
 <body>
- 
 <header>
      <nav>
              <div class="logo"> Виктор Рощупкин </div>
@@ -163,5 +162,20 @@
 </footer>
 </div></div></div></div></section>
 </main> 
+<div class="preloader">
+  <div class="preloader__row">
+    <div class="preloader__item"></div>
+    <div class="preloader__item"></div>
+  </div>
+</div>
+<script>
+  window.onload = function () {
+    document.body.classList.add('loaded_hiding');
+    window.setTimeout(function () {
+      document.body.classList.add('loaded');
+      document.body.classList.remove('loaded_hiding');
+    }, 500);
+  }
+</script>
 </body>
 </html> 
